--- a/index.html
+++ b/index.html
@@ -1,15 +1,67 @@
-<!DOCETYPE html>
-<html>
-    <head>
-        <title> Aviel Dagan </title>
-    </head>
-    <body>
-        <h1>Aviel Dagan</h1>
-        <h3><b>Excercies</b></h3>
-        <ul>
-            <li><a href="ex1/index.html"> <b>1.</b> My Family</a></li>
-        </ul>
-        <br><br>
-        <h6>&copy; Aviel &nbsp;&nbsp; Dagan</h6>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <title>Aviel Dagan</title>
+      <link rel="stylesheet" href="includes/style.css">
+   </head>
+   <body>
+      <header class="top_container">
+         <a href="index.html" id="logo"><a><span>Aviel_Dagan;</span>
+      </header>
+      <nav class="main_nav">
+         <a href="exercises/ex1/index.html" target="_blank" >EX1</a>
+         <a href= #>#</a>
+         <a href= #>#</a>
+         <a href= #>#</a>
+         <a href= "https://github.com/AvielDagan/AvielDagan.git" target="_blank">GitHub</a>
+      </nav>
+      <main>
+         <div id="wrapper">
+            <section class="images">
+               <img src="images/Placeholder1.png">
+               <img src="images/Placeholder2.png">
+               <img src="images/Placeholder3.png">
+            </section>
+            <section class="discover">
+               <h2>Aviel Dagan { }</h2>
+               <p>Just studying Software Engineering.<br>
+                <i>"You are beautiful like a goal in the last minute"</i> - Old man at Blumfield Stadium.
+                </p>
+            </section>
+            <section id="lang">
+               <h2>Programming Languages /n</h2>
+               <ul class="langlist">
+                 <li><img src="images/c.png" alt="C icon" title="C"><span>C</span></li>
+                 <li><img src="images/c++.png" alt="C++ icon" title="C++"><span>C++</span></li>
+                 <li><img src="images/html.png" alt="HTML5 icon" title="HTML5"><span>HTML5</span></li>
+                 <li><img src="images/css.png" alt="CSS icon" title="CSS"><span>CSS</span></li>
+               </ul>
+            </section>
+            
+            <section id="merge">
+                <img src="images/cover4.png" id="img1">
+                <img src="images/cover5.png" id="img2">
+            </section>
+         </div>
+      </main>
+      <footer>
+         <button><a href ="https://github.com/AvielDagan/AvielDagan.git" class="button_text" target="_blank"> SEE MY WORK </a></button>
+            <span>
+              <a href="http://www.madridista.co.il" id= "madrid" target="_blank">MADRIDISTA</a>
+              <a href="https://www.geektime.co.il" target="_blank">GeekTime</a>
+              <a href="https://www.calcalist.co.il" target="_blank">CALCALIST</a>
+              <a href="https://www.sport5.co.il" target="_blank">SPORT5</a>
+              <a href="https://www.youtube.com/watch?v=IuIHU1lrvSQ" target="_blank">BEST LAST MIN GOAL</a>
+            </span>
+            <div class="clear"></div>
+            <section class="line"></section>
+            
+            <section id="more">
+              <a href="https://www.facebook.com/aviel.dagan" target="_blank"><img src="images/facebook.png"></a>
+              <a href="https://www.linkedin.com/in/aviel-dagan-019ba1171" target="_blank"><img src="images/link.png"></a>            
+              <a href="https://www.instagram.com/aviel_dagan" target="_blank"><img src="images/instagram.png"></a>
+            </section>
+          </footer>
+   </body>
 </html>
