--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </header>
       <nav class="main_nav">
          <a href="exercises/ex1/index.html" target="_blank" >EX1</a>
-         <a href= #>#</a>
+         <a href="exercises/ex3/index.html" target="_blank" >EX3</a>
          <a href= #>#</a>
          <a href= #>#</a>
          <a href= "https://github.com/AvielDagan/AvielDagan.git" target="_blank">GitHub</a>
